--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -22,8 +23,10 @@
          <children>
             <Pane prefHeight="177.0" prefWidth="273.0">
                <children>
-                  <Button fx:id="BUTTON" alignment="CENTER" layoutX="143.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleCLick" text="Button" />
-                  <TextField fx:id="TEKST" layoutX="101.0" layoutY="43.0" prefHeight="0.0" prefWidth="136.0" />
+                  <Button fx:id="BUTTON" alignment="CENTER" layoutX="137.0" layoutY="138.0" mnemonicParsing="false" onAction="#handleCLick" text="Button" />
+                  <TextField fx:id="TEKST1" layoutX="101.0" layoutY="43.0" prefHeight="0.0" prefWidth="136.0" />
+                  <Label fx:id="Label" alignment="CENTER" layoutX="149.0" layoutY="6.0" text="Label" />
+                  <TextField fx:id="TEKST2" alignment="CENTER" layoutX="95.0" layoutY="97.0" />
                </children>
             </Pane>
          </children>
